--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,12 @@
         <version>4.3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
