--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <!--<excludes>-->
-                        <!--<exclude>edu/urfu/project_workshop/neural/**.java</exclude>-->
+                    <!--<exclude>edu/urfu/project_workshop/neural/**.java</exclude>-->
                     <!--</excludes>-->
                 </configuration>
             </plugin>
@@ -96,44 +96,34 @@
             <version>3.10.0</version>
             <scope>test</scope>
         </dependency>
-
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
-        </dependency>
-
-
-
         <!--DL libraries-->
         <dependency>
-        <groupId>org.deeplearning4j</groupId>
-        <artifactId>deeplearning4j-core</artifactId>
-        <version>RELEASE</version>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>1.0.0-BETA2</version>
         </dependency>
         <dependency>
-        <groupId>org.nd4j</groupId>
-        <artifactId>nd4j-native-platform</artifactId>
-        <version>RELEASE</version>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>RELEASE</version>
         </dependency>
         <!--logging-->
         <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.15</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.15</version>
         </dependency>
         <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.1.7</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
         </dependency>
 
         <!--Client for MNIST dataset download-->
         <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>4.3.5</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
         </dependency>
 
         <dependency>
