--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
     <version>1.1-SNAPSHOT</version>
     <properties>
         <java.version>1.8</java.version>
+        <start-class>edu.urfu.project_workshop.Application</start-class>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
     </parent>
 
     <build>
@@ -26,9 +27,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <!--<excludes>-->
-                    <!--<exclude>edu/urfu/project_workshop/neural/**.java</exclude>-->
-                    <!--</excludes>-->
                 </configuration>
             </plugin>
 
@@ -100,12 +98,18 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
-            <version>1.0.0-BETA2</version>
+            <version>1.0.0-beta3</version>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
             <version>RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>mkl-dnn:macosx-x86_64</artifactId>
+                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--logging-->
         <dependency>
